[+] Developed template for desktop devices

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
   <div class="logo-menu-container">
     <div class="container">
       <div class="row no-gutters">
@@ -36,11 +36,11 @@
       <div class="row no-gutters">
         <div class="col-12">
           <nav class="categories-menu">
-            <a href="#" class="active">ALL</a>
-            <a href="#">Mobile apps</a>
+            <a href="#" class="active">all</a>
+            <a href="#">mobile apps</a>
             <a href="#">web services</a>
             <a href="#">augmented reality</a>
-            <a href="#">UX/ui design</a>
+            <a href="#">ux/ui design</a>
             <a href="#">development</a>
           </nav>
         </div>
@@ -48,3 +48,161 @@
     </div>
   </div>
 </header>
+
+<article class="main-article">
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="col-12">
+        <header class="title">What We Do</header>
+        <div class="description">
+          We launch different types of platforms and operating systems using distinguishes<br/>
+          of every platform or operating system as adventage and a powerful tool.
+        </div>
+      </div>
+    </div>
+  </div>
+</article>
+
+<section class="main-articles">
+  <div class="container">
+    <div class="row no-gutters">
+      <article class="article col-6">
+        <img src="/assets/img/articles/mobile_apps.jpg" alt="Mobile App">
+        <header class="title">Mobile Apps</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+
+      <article class="article col-6">
+        <img src="/assets/img/articles/web_services.jpg" alt="Mobile App">
+        <header class="title">Web Services</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+    </div>
+
+    <div class="row no-gutters">
+      <article class="article col-6">
+        <img src="/assets/img/articles/augmented_reality.jpg" alt="Mobile App">
+        <header class="title">Augmented Reality</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+
+      <article class="article col-6">
+        <img src="/assets/img/articles/ux_ui_design.jpg" alt="Mobile App">
+        <header class="title">UX/UI Design</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+    </div>
+
+    <div class="row no-gutters">
+      <article class="article mx-auto col-6">
+        <img src="/assets/img/articles/development.jpg" alt="Mobile App">
+        <header class="title">Development</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+    </div>
+  </div>
+</section>
+
+<article class="enjoy-article">
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="col-12">
+        <header class="title">
+          We enjoy what we do.<br/>
+          Working with smart people at great projects.<br/>
+          Contact us if you want to work with us.<br/>
+        </header>
+        <footer>
+          <button class="mx-auto">Contact Us</button>
+        </footer>
+      </div>
+    </div>
+  </div>
+</article>
+
+<footer class="footer">
+  <div class="container">
+    <div class="row no-gutters contacts">
+      <div class="col-12">
+        <div class="row">
+          <div class="department col-3">
+            <div class="title">Headquarters:</div>
+            <div class="contact-data">
+              11 E. Chavdar Street, Office 222,<br/>
+              Kiev, Ukraine 04335
+            </div>
+          </div>
+
+          <div class="department col-3">
+            <div class="title">USA:</div>
+            <div class="contact-data">
+              <a href="mailto:usa.hr@trinetix.com" class="email">usa.hr@trinetix.com</a>
+              <div class="phone">+1 212-336-1440</div>
+            </div>
+          </div>
+
+          <div class="department col-3">
+            <div class="title">Ukraine:</div>
+            <div class="contact-data">
+              <a href="mailto:ua.hr@trinetix.com" class="email">ua.hr@trinetix.com</a>
+              <div class="phone">+38 044-334-2341</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="info-menu-socials">
+    <div class="container">
+      <div class="row">
+        <div class="copyright col-3">
+          © 2010-2015 Trinetix LLC
+        </div>
+
+        <div class="department col-6">
+          <nav class="main-menu">
+            <a href="#">Home</a>
+            <a href="#">Case Studies</a>
+            <a href="#">Services</a>
+            <a href="#">Expertise</a>
+            <a href="#">About</a>
+            <a href="#">Contact us</a>
+          </nav>
+        </div>
+
+        <div class="socials col-3">
+          <a href="#"><img src="/assets/img/socials/fb.png" alt="Facebook"></a>
+          <a href="#"><img src="/assets/img/socials/in.png" alt="Linkedin"></a>
+          <a href="#"><img src="/assets/img/socials/g-plus.png" alt="G+"></a>
+          <a href="#"><img src="/assets/img/socials/tw.png" alt="Twitter"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
