--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,95 @@
-<p>home works!</p>
+<article class="main-article">
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="col-12">
+        <header class="title">What We Do</header>
+        <div class="description">
+          We launch different types of platforms and operating systems using distinguishes<br/>
+          of every platform or operating system as adventage and a powerful tool.
+        </div>
+      </div>
+    </div>
+  </div>
+</article>
+
+<section class="main-articles">
+  <div class="container">
+    <div class="row no-gutters">
+      <article class="article col-6">
+        <img src="/assets/img/articles/mobile_apps.jpg" alt="Mobile App">
+        <header class="title">Mobile Apps</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+
+      <article class="article col-6">
+        <img src="/assets/img/articles/web_services.jpg" alt="Mobile App">
+        <header class="title">Web Services</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+    </div>
+
+    <div class="row no-gutters">
+      <article class="article col-6">
+        <img src="/assets/img/articles/augmented_reality.jpg" alt="Mobile App">
+        <header class="title">Augmented Reality</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+
+      <article class="article col-6">
+        <img src="/assets/img/articles/ux_ui_design.jpg" alt="Mobile App">
+        <header class="title">UX/UI Design</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+    </div>
+
+    <div class="row no-gutters">
+      <article class="article mx-auto col-6">
+        <img src="/assets/img/articles/development.jpg" alt="Mobile App">
+        <header class="title">Development</header>
+        <div class="description">
+          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+        </div>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </article>
+    </div>
+  </div>
+</section>
+
+<article class="enjoy-article">
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="col-12">
+        <header class="title">
+          We enjoy what we do.<br/>
+          Working with smart people at great projects.<br/>
+          Contact us if you want to work with us.<br/>
+        </header>
+        <footer>
+          <a routerLink="/contacts" class="button mx-auto">Contact Us</a>
+        </footer>
+      </div>
+    </div>
+  </div>
+</article>
