[+] Added services components and routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,12 +36,12 @@
       <div class="row no-gutters">
         <div class="col-12">
           <nav class="categories-menu">
-            <a href="#" class="active">all</a>
-            <a href="#">mobile apps</a>
-            <a href="#">web services</a>
-            <a href="#">augmented reality</a>
-            <a href="#">ux/ui design</a>
-            <a href="#">development</a>
+            <a routerLink="/">all</a>
+            <a routerLink="/services/mobile_apps" routerLinkActive="active">mobile apps</a>
+            <a routerLink="/services/web_srvices" routerLinkActive="active">web services</a>
+            <a routerLink="/services/augmented_reality" routerLinkActive="active">augmented reality</a>
+            <a routerLink="/services/ux_ui_design" routerLinkActive="active">ux/ui design</a>
+            <a routerLink="/services/development" routerLinkActive="active">development</a>
           </nav>
         </div>
       </div>
