--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,55 +22,55 @@
           We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
         </div>
         <footer>
-          <button>Learn More</button>
+          <a routerLink="/services/mobile_apps" class="button">Learn More</a>
         </footer>
       </article>
 
       <article class="article col-6">
-        <img src="/assets/img/articles/web_services.jpg" alt="Mobile App">
+        <img src="/assets/img/articles/web_services.jpg" alt="Web Services">
         <header class="title">Web Services</header>
         <div class="description">
           We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
         </div>
         <footer>
-          <button>Learn More</button>
+          <a routerLink="/services/web_srvices" class="button">Learn More</a>
         </footer>
       </article>
     </div>
 
     <div class="row no-gutters">
       <article class="article col-6">
-        <img src="/assets/img/articles/augmented_reality.jpg" alt="Mobile App">
+        <img src="/assets/img/articles/augmented_reality.jpg" alt="Augmented Reality">
         <header class="title">Augmented Reality</header>
         <div class="description">
           We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
         </div>
         <footer>
-          <button>Learn More</button>
+          <a routerLink="/services/augmented_reality" class="button">Learn More</a>
         </footer>
       </article>
 
       <article class="article col-6">
-        <img src="/assets/img/articles/ux_ui_design.jpg" alt="Mobile App">
+        <img src="/assets/img/articles/ux_ui_design.jpg" alt="UX/UI Design">
         <header class="title">UX/UI Design</header>
         <div class="description">
           We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
         </div>
         <footer>
-          <button>Learn More</button>
+          <a routerLink="/services/ux_ui_design" class="button">Learn More</a>
         </footer>
       </article>
     </div>
 
     <div class="row no-gutters">
       <article class="article mx-auto col-6">
-        <img src="/assets/img/articles/development.jpg" alt="Mobile App">
+        <img src="/assets/img/articles/development.jpg" alt="Development">
         <header class="title">Development</header>
         <div class="description">
           We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
         </div>
         <footer>
-          <button>Learn More</button>
+          <a routerLink="/services/development" class="button">Learn More</a>
         </footer>
       </article>
     </div>
@@ -82,9 +82,18 @@
     <div class="row no-gutters">
       <div class="col-12">
         <header class="title">
-          We enjoy what we do.<br/>
-          Working with smart people at great projects.<br/>
-          Contact us if you want to work with us.<br/>
+          <div class="d-none d-md-none d-lg-block">
+            We enjoy what we do.<br/>
+            Working with smart people at great projects.<br/>
+            Contact us if you want to work with us.
+          </div>
+
+          <div class="d-none d-sm-block d-md-block d-lg-none">
+            We enjoy what we do.<br/>
+            Working with smart people<br/>
+            at greatprojects. Contact us if you<br/>
+            want to workwithy us.
+          </div>
         </header>
         <footer>
           <a routerLink="/contacts" class="button mx-auto">Contact Us</a>
