--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,9 +3,12 @@
     <div class="row no-gutters">
       <div class="col-12">
         <header class="title">What We Do</header>
-        <div class="description">
+        <div class="description d-none d-sm-block">
           We launch different types of platforms and operating systems using distinguishes<br/>
           of every platform or operating system as adventage and a powerful tool.
+        </div>
+        <div class="description d-block d-sm-none">
+          We launch different types of platforms and operating systems using distinguishes of every platform or operating system as adventage and a powerful tool.
         </div>
       </div>
     </div>
@@ -15,7 +18,7 @@
 <section class="main-articles">
   <div class="container">
     <div class="row no-gutters">
-      <article class="article col-6">
+      <article class="article col-xs-12 col-sm-6">
         <img src="/assets/img/articles/mobile_apps.jpg" alt="Mobile App">
         <header class="title">Mobile Apps</header>
         <div class="description">
@@ -26,7 +29,7 @@
         </footer>
       </article>
 
-      <article class="article col-6">
+      <article class="article col-xs-12 col-sm-6">
         <img src="/assets/img/articles/web_services.jpg" alt="Web Services">
         <header class="title">Web Services</header>
         <div class="description">
@@ -39,7 +42,7 @@
     </div>
 
     <div class="row no-gutters">
-      <article class="article col-6">
+      <article class="article col-xs-12 col-sm-6">
         <img src="/assets/img/articles/augmented_reality.jpg" alt="Augmented Reality">
         <header class="title">Augmented Reality</header>
         <div class="description">
@@ -50,7 +53,7 @@
         </footer>
       </article>
 
-      <article class="article col-6">
+      <article class="article col-xs-12 col-sm-6">
         <img src="/assets/img/articles/ux_ui_design.jpg" alt="UX/UI Design">
         <header class="title">UX/UI Design</header>
         <div class="description">
@@ -63,7 +66,7 @@
     </div>
 
     <div class="row no-gutters">
-      <article class="article mx-auto col-6">
+      <article class="article mx-auto col-xs-12 col-sm-6">
         <img src="/assets/img/articles/development.jpg" alt="Development">
         <header class="title">Development</header>
         <div class="description">
