[+] Developed template for mobile phones devices

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,7 +79,7 @@
             </div>
           </div>
 
-          <div class="department col-xs-6 col-sm-3">
+          <div class="department col-6 col-sm-3">
             <div class="title">USA:</div>
             <div class="contact-data">
               <a href="mailto:usa.hr@trinetix.com" class="email">usa.hr@trinetix.com</a>
@@ -87,7 +87,7 @@
             </div>
           </div>
 
-          <div class="department col-xs-6 col-sm-3">
+          <div class="department col-6 col-sm-3">
             <div class="title">Ukraine:</div>
             <div class="contact-data">
               <a href="mailto:ua.hr@trinetix.com" class="email">ua.hr@trinetix.com</a>
