--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,13 @@
         <img src="/assets/img/articles/mobile_apps.jpg" alt="Mobile App">
         <header class="title">Mobile Apps</header>
         <div class="description">
-          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          <div class="description d-none d-sm-block">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          </div>
+          <div class="description d-block d-sm-none">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
+            clients achieve their goals and grow their brands.
+          </div>
         </div>
         <footer>
           <a routerLink="/services/mobile_apps" class="button">Learn More</a>
@@ -33,7 +39,13 @@
         <img src="/assets/img/articles/web_services.jpg" alt="Web Services">
         <header class="title">Web Services</header>
         <div class="description">
-          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          <div class="description d-none d-sm-block">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          </div>
+          <div class="description d-block d-sm-none">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
+            clients achieve their goals and grow their brands.
+          </div>
         </div>
         <footer>
           <a routerLink="/services/web_srvices" class="button">Learn More</a>
@@ -46,7 +58,13 @@
         <img src="/assets/img/articles/augmented_reality.jpg" alt="Augmented Reality">
         <header class="title">Augmented Reality</header>
         <div class="description">
-          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          <div class="description d-none d-sm-block">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          </div>
+          <div class="description d-block d-sm-none">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
+            clients achieve their goals and grow their brands.
+          </div>
         </div>
         <footer>
           <a routerLink="/services/augmented_reality" class="button">Learn More</a>
@@ -57,7 +75,13 @@
         <img src="/assets/img/articles/ux_ui_design.jpg" alt="UX/UI Design">
         <header class="title">UX/UI Design</header>
         <div class="description">
-          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          <div class="description d-none d-sm-block">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          </div>
+          <div class="description d-block d-sm-none">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
+            clients achieve their goals and grow
+          </div>
         </div>
         <footer>
           <a routerLink="/services/ux_ui_design" class="button">Learn More</a>
@@ -70,7 +94,13 @@
         <img src="/assets/img/articles/development.jpg" alt="Development">
         <header class="title">Development</header>
         <div class="description">
-          We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          <div class="description d-none d-sm-block">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
+          </div>
+          <div class="description d-block d-sm-none">
+            We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
+            clients achieve their goals and grow their brands.
+          </div>
         </div>
         <footer>
           <a routerLink="/services/development" class="button">Learn More</a>
@@ -96,6 +126,12 @@
             Working with smart people<br/>
             at greatprojects. Contact us if you<br/>
             want to workwithy us.
+          </div>
+
+          <div class="d-block d-sm-none">
+            We enjoy working with smart people on challenging tasks<br/>
+            and deliver great products.<br/>
+            Let's team up to create something worth the effort.
           </div>
         </header>
         <footer>
