[+] Fix image position in articles for iPhone

--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -211,6 +211,9 @@
 
     .row {
       .article {
+        text-align: center;
+        overflow: hidden;
+
         img {
           width: 329px;
           margin-left: -13px;
