[+] Fix some styles after testing

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,10 +22,10 @@
         <img src="/assets/img/articles/mobile_apps.jpg" alt="Mobile App">
         <header class="title">Mobile Apps</header>
         <div class="description">
-          <div class="description d-none d-sm-block">
+          <div class="d-none d-sm-block">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
           </div>
-          <div class="description d-block d-sm-none">
+          <div class="d-block d-sm-none">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
             clients achieve their goals and grow their brands.
           </div>
@@ -39,10 +39,10 @@
         <img src="/assets/img/articles/web_services.jpg" alt="Web Services">
         <header class="title">Web Services</header>
         <div class="description">
-          <div class="description d-none d-sm-block">
+          <div class="d-none d-sm-block">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
           </div>
-          <div class="description d-block d-sm-none">
+          <div class="d-block d-sm-none">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
             clients achieve their goals and grow their brands.
           </div>
@@ -58,10 +58,10 @@
         <img src="/assets/img/articles/augmented_reality.jpg" alt="Augmented Reality">
         <header class="title">Augmented Reality</header>
         <div class="description">
-          <div class="description d-none d-sm-block">
+          <div class="d-none d-sm-block">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
           </div>
-          <div class="description d-block d-sm-none">
+          <div class="d-block d-sm-none">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
             clients achieve their goals and grow their brands.
           </div>
@@ -75,10 +75,10 @@
         <img src="/assets/img/articles/ux_ui_design.jpg" alt="UX/UI Design">
         <header class="title">UX/UI Design</header>
         <div class="description">
-          <div class="description d-none d-sm-block">
+          <div class="d-none d-sm-block">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
           </div>
-          <div class="description d-block d-sm-none">
+          <div class="d-block d-sm-none">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
             clients achieve their goals and grow
           </div>
@@ -94,10 +94,10 @@
         <img src="/assets/img/articles/development.jpg" alt="Development">
         <header class="title">Development</header>
         <div class="description">
-          <div class="description d-none d-sm-block">
+          <div class="d-none d-sm-block">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our clients achieve their goals and grow their brands.
           </div>
-          <div class="description d-block d-sm-none">
+          <div class="d-block d-sm-none">
             We are a nimble team of designers, developers, and strategists who are passionate about helping our<br/>
             clients achieve their goals and grow their brands.
           </div>
