--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -179,6 +179,7 @@
           font-size: 18px;
           margin-top: -6px;
           padding: 0px 16px;
+          height: 63px;
         }
       }
     }
