--- a/src/styles/desktop.scss
+++ b/src/styles/desktop.scss
@@ -18,6 +18,49 @@ a {
   padding: 0;
 }
 
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $darkBlue;
+  display: none;
+
+  &.active {
+    z-index: 1000;
+    display: block;
+  }
+
+  .main-menu {
+    display: flex;
+    flex-direction: column;
+    margin-top: 90px;
+
+    a {
+      display: flex;
+      font-family: "Decima Nova Pro Bold";
+      text-transform: uppercase;
+      margin: 10px 0;
+      color: #fff;
+
+      &.active {
+        color: $lightBlue;
+      }
+    }
+  }
+
+  .close {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-family: "Decima Nova Pro Lt";
+    color: #fff;
+    text-shadow: none;
+    padding: 15px 20px;
+    opacity: 1;
+  }
+}
+
 .header {
   background: $darkBlue;
   height: 354px;
